# fn-decorator

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: tests.rs
tests/decorator_tests/: async_decorator.rs  async_impl_member_decorator.rs  async_impl_static_member_decorator.rs  debug_fn_decorator.rs  decorator_with_param.rs  decorator_without_params.rs  exact_params_of_async_fn_decorator.rs  exact_params_of_async_impl_member_decorator.rs  exact_params_of_fn_decorator.rs  exact_params_of_impl_member_decorator.rs  fn_without_params_decorator.rs  hiding_params_of_async_fn_decorator.rs  hiding_params_of_async_impl_member_decorator.rs  hiding_params_of_fn_decorator.rs  hiding_params_of_impl_member_decorator.rs  hiding_self_param_in_impl_member_decorator.rs  impl_member_decorator.rs  impl_static_member_decorator.rs  mod.rs  overriding_return_type.rs  visibility.rs
